--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -129,17 +129,20 @@ button:hover{
 .login-kset-logo{
     animation: glowup 10000ms ease-in-out;
     animation-fill-mode: forwards;
-
+    
 }
 @keyframes glowup {
     0% {
-        filter: brightness(0.75);
+        filter: brightness(0.75) drop-shadow(0px 0px 0px black);
     }
     20% {
-        filter: brightness(0.75);
+        filter: brightness(0.75)
     }
     50% {
-        filter: brightness(1);
+        filter: brightness(1)
+    }
+    100% {
+        filter: brightness(1) drop-shadow(5px 10px 6px black);
     }
 }
 
@@ -183,7 +186,7 @@ button:hover{
 
 /* Left Column */
 .left-column{
-    width: 25vw;
+    width: 250px;
     margin-top: 65px;
     height: calc(100vh - 75px);
     position: sticky;
@@ -195,8 +198,7 @@ button:hover{
 
 /* Sidebar */
 .sidebar{
-    width: 100%;
-    max-width: 300px;
+    width: 250px;
     box-sizing: border-box;
     height: 100%;
     padding: 1%;
@@ -423,13 +425,14 @@ div > ol{
     animation-fill-mode: forwards;
 }
 .track:hover > .play-wrapper {
+    display: block;
     animation-name: show-up;
     animation-duration: 500ms;
     animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     animation-fill-mode: forwards;
 }
 .track:hover > .like-wrapper {
-    opacity: 1;
+    display: block;
 }
 .cover{
     width: 100%;
@@ -442,7 +445,7 @@ div > ol{
     width: 10%;
     margin-bottom: -75%;
     margin-top: 32.5%;
-    opacity: 0;
+    display: none;
     pointer-events: none;
 }
 .play{
@@ -452,7 +455,7 @@ div > ol{
 }
 .like-wrapper{
     width: 10%;
-    opacity: 0;
+    display: none;
     height: 0;
 }
 .like{
@@ -673,9 +676,10 @@ div > ol{
 
 /* Audio Player */
 .footer{ /* Footer for audio Player */
-    position: absolute;
+    position: fixed;
+    left: calc(1.2vw + 250px);
     bottom: 0px;
-    width: calc(98.5vw - 250px);
+    width: calc(98.2vw - 250px);
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -995,12 +999,10 @@ input[type="range"]:active::-ms-thumb {
 }
 @keyframes show-up {
     from {
-        opacity: 0;
         margin-top: 42.5%;
         margin-bottom: -85%;
     }
     to {
-        opacity: 1;
         margin-bottom: -75%;
         margin-top: 32.5%;
     }
