--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -165,7 +165,7 @@ button:hover{
     border: #de6c1a solid 2px;
 }
 .login-button{
-    background-color: #de6c1a;
+    background-color: #de6c1a !important;
     border: none;
 }
 
@@ -500,7 +500,8 @@ div > ol{
     flex-flow: column;
     justify-content: flex-start;
     border-radius: 24px;
-    background-color: #1e1e1e
+    background-color: #1e1e1e;
+    margin-top: 1vh;
 }
 .playlist-search-bar{
     margin-top: 1em;
@@ -561,8 +562,32 @@ div > ol{
     border-radius: 20px;
     padding: 0.5em;
     margin: 1em;
+    background-color: #1e1e1e;
+    border-color: #f1f1f1;
+    border-width: 2px;
 }
 
+.playlist-wrapper{
+    background-color: #111;
+    border-radius: 24px;
+    padding: 1em;
+    margin: 1em 0em;
+}
+
+.big-text{
+    font-size: 2rem;
+}
+.covers-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 320px;
+    max-height: 320px;
+    border-radius: 12px;
+}
+.small-cover{
+    height: 80px;
+    width: 80px;
+}
 /*Artist Page, also used for profile page*/
 
 .artist-profile,.profile{
